<resources>
    <string name="app_name" translatable="false">SimplePass</string>
    <string name="add_password">Add Password</string>
    <string name="password_hint">Password</string>
    <string name="login_hint">Login</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_add_save_button">Save</string>
    <string name="search_bar_hint">Search</string>
    <string name="delete_password">Delete password</string>
    <string name="unlock_button">Unlock</string>
    <string name="APP_KEY">ncjmp7uu69nr7pv</string>
    <string name="retype_password_hint">Retype password</string>
    <string name="fingerprint_enable_under_text">Keep in mind that, in contrast to other applications you may be familiar with, SimplePass uses fingerprint unlocking as a second step of security - two-factor authentication - instead of convenience.</string>
    <string name="next">Next</string>
    <string name="fingerprint_enable_text">Do you want to add fingerprint unlock (2FA)?</string>
    <string name="settings">Settings</string>
    <string name="passwords">Passwords</string>
    <string name="copy_login">Copy Login</string>
    <string name="copy_e_mail">Copy e-mail</string>
    <string name="local_backup">Local backup</string>
    <string name="local_import">Local import</string>
    <string name="log_in_to_dropbox">Log in to Dropbox</string>
    <string name="log_out_of_dropbox">Log out of Dropbox</string>
    <string name="download_backup">Download backup from Dropbox</string>
    <string name="upload_backup">Upload backup to Dropbox</string>
    <string name="change_password">Change password</string>
    <string name="create_a_password_title_text">Create a password for SimplePass database</string>
    <string name="password_requirements">Your password needs to be at least 10 characters long.\n Remember your password as there is no way to recover it.</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="password_setup_mismatch">Passwords don\'t match or length is too small</string>
    <string name="dropbox_no_file">No file uploaded to Dropbox</string>
    <string name="dropbox_file_modification">Dropbox file modification date</string>
    <string name="import_or_export_ongoing">Import or Export is ongoing</string>
    <string name="import_dialog_message">You should wait until import or upload finishes. If you quit now there is a possibility your data may get corrupted</string>
    <string name="import_dialog_exit">Exit</string>
    <string name="import_dialog_wait">Wait</string>
    <string name="logged_account">Logged in Dropbox with email</string>
    <string name="dropbox_login_success">Logged in to Dropbox</string>
    <string name="database_import_success">Imported database</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="provide_name_and_password_toast">You must provide name and password</string>
    <string name="password_delete_dialog_title">Password entry deletion</string>
    <string name="password_delete_dialog_message">Do you really want to delete this password entry?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="AddUpdatePasswordActivityTitleUpdate">Update or remove password</string>
    <string name="AddUpdatePasswordActivityTitleAdd">Add new password</string>
    <string name="invalid_password">Invalid password</string>
    <string name="empty_password">Empty password</string>
    <string name="passwords_mismatch">Passwords don\'t match up</string>
    <string name="passwords_length_requirement">Password should be at least 10 characters long</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="authentication_error">Authentication error</string>
    <string name="new_password_added">New password added</string>
    <string name="password_updated">Password updated</string>
    <string name="password_deleted">Password deleted</string>
    <string name="uploading_database">Uploading database to Dropbox</string>
    <string name="no_internet_connection">Not connected to the internet</string>
    <string name="welcome_to_simplepass">Welcome to SimplePass</string>
    <string name="biometric_prompt_message">Log in using your biometric credentials</string>
    <string name="cancel">Cancel</string>
    <string name="licenses">Licenses of used libraries</string>
    <string name="dropbox_download">Downloading database from Dropbox</string>
    <string name="database_file_not_found">Database file not found</string>
    <string name="password_details">Password details</string>
    <string name="password_change_success">Password change successful</string>
    <string name="copy_password">Copy password</string>
</resources>