<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.PasswordSetupFragment"
        android:id="@+id/login_setup_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:text="@string/welcome_to_simplepass"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="100dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/create_a_password_title_text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textAlignment="center"
                android:text="@string/password_requirements"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <EditText
                    android:id="@+id/first_password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:layout_marginBottom="8dp"
                    />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="?android:attr/listDivider"/>
                <EditText
                    android:id="@+id/second_password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/retype_password_hint"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:padding="16dp"
                    />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/fingerprint_enable_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textSize="14sp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fingerprint_switch"
            app:layout_constraintTop_toBottomOf="@id/linear_layout"
            android:text="@string/fingerprint_enable_text"/>
        <TextView
            android:id="@+id/fingerprint_enable_under_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textSize="12sp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fingerprint_switch"
            app:layout_constraintTop_toBottomOf="@id/fingerprint_enable_text"
            android:text="@string/fingerprint_enable_under_text"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/fingerprint_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/fingerprint_enable_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/fingerprint_enable_under_text"
            app:layout_constraintTop_toBottomOf="@id/linear_layout"
            />

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/actionbar_border"
                android:textAllCaps="false"
                android:layout_gravity="bottom"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/splash_screen"/>
</FrameLayout>