<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AuthenticationSettingsActivity">


    <TextView
        android:id="@+id/password_requirements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_requirements"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="14sp"
        android:gravity="center"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/password_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/password_requirements">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/first_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="16dp"
                android:layout_marginBottom="8dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="16dp"
                android:background="?android:attr/listDivider"/>
            <EditText
                android:id="@+id/second_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/retype_password_hint"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="16dp"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        app:layout_constraintTop_toBottomOf="@id/password_cardview"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:paddingHorizontal="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/splash_screen_layout"
        layout="@layout/splash_screen"/>

</FrameLayout>