<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddUpdatePasswordActivity">

    <LinearLayout
        android:id="@+id/login_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_textInput"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TextInputLayout"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_margin="16dp">

            <EditText
                android:importantForAutofill="no"
                android:id="@+id/login_add_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/login_hint"
                android:inputType="text"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/copy_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="36dp"
            android:minHeight="36dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_content_copy_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            android:contentDescription="@string/copy_login" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/password_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_textInput"
        android:orientation="horizontal"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent"
            app:passwordToggleEnabled="true"
            style="@style/TextInputLayout"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/email_textInput"
            >

            <EditText
                android:id="@+id/password_add_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:importantForAutofill="no"

                android:inputType="textPassword"
                android:minHeight="48dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
            android:id="@+id/copy_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_add_save_button"
            android:minWidth="36dp"
            android:minHeight="36dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:src="@drawable/ic_baseline_content_copy_24"
            android:background="?attr/selectableItemBackgroundBorderless"

            />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        style="@style/TextInputLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:id="@+id/name_add_editText"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/email_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_textInput"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/login_textInput"
            android:layout_margin="16dp"
            >
            <EditText
                android:id="@+id/email_add_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@id/login_add_editText"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
            android:id="@+id/copy_email_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_add_save_button"
            android:minWidth="36dp"
            android:minHeight="36dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_content_copy_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:visibility="gone"
            android:contentDescription="@string/copy_e_mail" />

    </LinearLayout>


    <Button
        android:id="@+id/password_add_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_add_save_button"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>