<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.setupFragment.SetupFragment">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_setup_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/welcome_to_simplepass"
            android:textAlignment="center"
            android:textSize="34sp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/scrollview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_constraintVertical_bias="0"
            />

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="false"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"
            app:layout_constraintBottom_toTopOf="@id/next_button">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/create_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="bottom|center"
                    android:text="@string/create_a_password_title_text"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@id/password_requirements_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_weight="1" />

                <TextView
                    android:id="@+id/password_requirements_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/password_requirements"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@id/password_cardview"
                    app:layout_constraintTop_toBottomOf="@id/create_password_text" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/password_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    app:layout_constraintBottom_toTopOf="@id/fingerprint_enable_text"
                    app:layout_constraintTop_toBottomOf="@id/password_requirements_text">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/first_password_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:hint="@string/password_hint"
                            android:inputType="textPassword"
                            android:padding="16dp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginHorizontal="16dp"
                            android:background="?android:attr/listDivider" />

                        <EditText
                            android:id="@+id/second_password_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:hint="@string/retype_password_hint"
                            android:inputType="textPassword"
                            android:padding="16dp" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/fingerprint_enable_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/fingerprint_enable_text"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/fingerprint_switch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_cardview" />

                <TextView
                    android:id="@+id/fingerprint_enable_under_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight="1"
                    android:text="@string/fingerprint_enable_under_text"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/fingerprint_switch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fingerprint_enable_text"

                    />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/fingerprint_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="@id/fingerprint_enable_under_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/fingerprint_enable_text"
                    app:layout_constraintTop_toBottomOf="@id/fingerprint_enable_text" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/fingerprint_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="fingerprint_switch,fingerprint_enable_text,fingerprint_enable_under_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_border"
            android:text="@string/next"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scrollview"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <include
        android:id="@+id/splash_screen_layout"
        layout="@layout/splash_screen"/>
</FrameLayout>